@@ -21,10 +21,10 @@ unix:LIBS         += -lieee1284
 
 ################################################################################
 
-VERSION_STRING     = 0.1.0
+VERSION_STRING     = 0.1.1
 MAJOR_VERSION      = 0
 MINOR_VERSION      = 1
-PATCH_VERSION      = 0
+PATCH_VERSION      = 1
 
 ################################################################################
 
