@@ -2,6 +2,7 @@
 	* Bugfix: Don't use QTimer in non-GUI thread. Replaced by QTime()
 	  polling operation (polling is not bad here because the parport data
 	  collection is collecting 100 % CPU anyway
+	* Optimized drawing for lines that have always the same value
 
 2005-06-10  Bernhard Walle <bernhard.walle@gmx.de>
 	* Changed schematic:
